--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,12 @@
-:root {
+a {
+  text-decoration: none;
+}
+
+.dFlex {
+  display: flex;
+}
+
+/* :root {
   font-family: Inter, Avenir, Helvetica, Arial, sans-serif;
   font-size: 16px;
   line-height: 24px;
@@ -67,4 +75,4 @@ button:focus-visible {
   button {
     background-color: #f9f9f9;
   }
-}
+} */
