--- a/src/index.css
+++ b/src/index.css
@@ -1,10 +1,14 @@
-a {
+/* a {
   text-decoration: none;
 }
 
 .dFlex {
   display: flex;
-}
+} */
+
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
 
 /* :root {
   font-family: Inter, Avenir, Helvetica, Arial, sans-serif;
