--- a/src/components/body/body.css
+++ b/src/components/body/body.css
@@ -1,10 +1,12 @@
-.centerPage {
+/* .centerPage {
   margin: auto; 
   display: block;
 }
+
+*/
 
 img {
   width: 100%;
   margin: auto;
   display: block;
-}
+} 
