--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,18 @@
-.large-logo {
+body {
+  padding-top: 60px;
+}
+
+/* .custom-nav-bar {
+  position: sticky;
+  top: 0;
+  z-index: 10;
+} */
+
+
+
+/* .large-logo {
   width: 100%;
   margin: auto;
   display: block;
-} 
+}  */
+
